# docker-port-manager

./: README.md  pyproject.toml
docker_port_manager/: docker_port_manager.py
dpm/: app.py
dpm/core/: container.py
dpm/model/: exposed_port.py  host_port.py  port_binding.py
dpm/service/: container.py
dpm/service/message/: container.py
dpm/tests/unit/core/: test_container.py
dpm/tests/unit/model/: test_exposed_port.py  test_host_port.py  test_port_binding.py
dpm/tests/unit/service/message/: test_container.py
web/: package-lock.json  package.json  ui.drawio
web/public/: index.html  manifest.json
web/src/: App.tsx
web/src/components/ContainerTable/: ContainerTable.tsx  IdCell.tsx  NameCell.tsx  PortCell.tsx  index.ts
web/src/components/TitleBar/: TitleBar.tsx
web/src/services/: api.ts
web/src/types/: Container.ts  ExposedPort.ts  HostPort.ts  PortBinding.ts  index.ts
