[tool.poetry]
name = "docker-port-manager"
version = "0.1.0"
description = ""
authors = ["dra <decimal.rules.all@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "docker_port_manager"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
