[tool.poetry]
name = "docker-port-manager"
version = "0.1.0"
description = ""
authors = ["dra <decimal.rules.all@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dpm"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.2"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
mock = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
